--- a/package.json
+++ b/package.json
@@ -1,17 +1,36 @@
 {
-	"name": "my-portfolio",
-	"version": "1.0.0",
-	"dependencies": {
-		"jquery": "^3.3.1",
-		"normalize.css": "^8.0.1",
-		"postcss-simple-vars": "^5.0.1"
-	},
-	"devDependencies": {
-		"autoprefixer": "^9.4.3",
-		"gulp": "^3.9.1",
-		"gulp-autoprefixer": "^6.0.0",
-		"gulp-postcss": "^8.0.0",
-		"gulp-watch": "^5.0.1",
-		"postcss-nested": "^4.1.1"
-	}
+  "name": "my-portfolio",
+  "version": "1.0.0",
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "normalize.css": "^8.0.1",
+    "postcss-simple-vars": "^5.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.4.3",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-watch": "^5.0.1",
+    "node-sass": "^4.11.0",
+    "postcss-nested": "^4.1.1"
+  },
+  "description": "single page portfolio inlcuding spa travel site and advancedCSS",
+  "main": "gulpfile.js",
+  "scripts": {
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aiegoo/udemy.git"
+  },
+  "keywords": [
+    "portfolio"
+  ],
+  "author": "tonylee",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/aiegoo/udemy/issues"
+  },
+  "homepage": "https://github.com/aiegoo/udemy#readme"
 }
